fix: adjust button padding and title description gap for improved layout

--- a/src/app/pages/home/home.component.css
+++ b/src/app/pages/home/home.component.css
@@ -54,7 +54,7 @@ main {
   color: white;
   border-bottom: 2px solid rgba(255, 255, 255, 0.2);
   padding-bottom: 10px;
-  padding: 50px 30px;
+  padding: 20px 30px;
   border-radius: 20px;
   margin-bottom: 30px;
   background: rgb(89,84,221);
@@ -64,7 +64,7 @@ main {
 .title-and-description {
   display: flex;
   flex-direction: column;
-  gap: 20px;
+  gap: 10px;
 }
 
 .container-project-title {
